# NSGA

./: .travis.yml  NSGA-II.pro  README.md  main.cpp
genetic_algorithm/: Fenotype.cpp  Fenotype.h  Front.cpp  Front.h  Fronts.cpp  Fronts.h  Generation.cpp  Generation.h  Genotype.cpp  Genotype.h  Nsga.cpp  Nsga.h  Population.cpp  Population.h  Subject.cpp  Subject.h
gui/qt4/: MainWindow.cpp  MainWindow.h  MathGlDrawer.cpp  MathGlDrawer.h  QDebugStream.h  Qt4Window.cpp  Qt4Window.h
gui/qt4/forms/: mainwindow.ui
gui/terminal/: QtTerminal.cpp  QtTerminal.h
interfaces/: Core.h  Gui.h
libraries/: CustomAssertion.cpp  CustomAssertion.h  build_libs.sh
libraries/mathgl-2.3.2/: CMakeCache.txt  CMakeLists.txt  ChangeLog  ChangeLog.txt  Makefile  cmake_install.cmake  todo.txt
libraries/mathgl-2.3.2/examples/: CMakeLists.txt  Makefile  cmake_install.cmake  fltk_example.cpp  full_test.cpp  glut_example.cpp  mgl_example  mgl_qt_example  mpi_test.cpp  qt_example.cpp  samples.cpp  wnd_samples.cpp  wx_example.cpp
libraries/mathgl-2.3.2/include/: Makefile  cmake_install.cmake  config.h.in
libraries/mathgl-2.3.2/json/: CMakeLists.txt  Makefile  MglForJsTestBench  cmake_install.cmake  main.js  mathgl.Graph.js  mathgl.View.js  moc_Backend.cxx  moc_Backend.cxx_parameters  moc_MainWindow.cxx  moc_MainWindow.cxx_parameters  ui_MainWindow.h
libraries/mathgl-2.3.2/lang/: CMakeLists.txt  mathgl.i
libraries/mathgl-2.3.2/mgltex/: CMakeLists.txt  mgltex.dtx  mgltex.ins  mgltex.sty  sample.tex
libraries/mathgl-2.3.2/src/: CMakeLists.txt  Makefile  base.cpp  base_cf.cpp  canvas.cpp  canvas_cf.cpp  cmake_install.cmake  complex.cpp  (+26 more)
libraries/mgl2/: base.h  base_cf.h  canvas.h  canvas_cf.h  canvas_wnd.h  config.h  data.h  data_cf.h  datac.h  datac_cf.h  define.h  eval.h  evalc.h  fit.h  fltk.h  font.h  glut.h  mgl.h  mgl_cf.h  mpi.h  opengl.h  other.h  parser.h  prim.h  qmathgl.h  qt.h  vect.h  window.h  wnd.h  wx.h
math/: Expression.cpp  Expression.h  ExpressionParser.cpp  ExpressionParser.h  Functions.cpp  Functions.h  RandomGenerator.cpp  RandomGenerator.h
tests/: TestExample.cpp  main.cpp  tests.pro
tests/genetic_algorithm/: FenotypeMock.h  GenerationMock.h  GenotypeMock.h  TestFenotype.cpp  TestFront.cpp  TestFronts.cpp  TestGeneration.cpp  TestGenotype.cpp  TestNsga.cpp  TestPopulation.cpp  TestSubject.cpp
tests/math/: TestExpression.cpp  TestFunctions.cpp  TestRandomGenerator.cpp
(+155 files in other folders)
